<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/activity_web_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.zafindratafa.terence.mynews.Controllers.Activities.WebActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/activity_web_toolbar"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@android:color/white"
        android:background="@color/colorPrimary"/>

    <WebView
        android:id="@+id/activity_web_webview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>
