<android.support.v4.widget.SwipeRefreshLayout
    android:id="@+id/fragment_business_swipe_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.zafindratafa.terence.mynews.Controllers.Fragments.BusinessFragment">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/fragment_business_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <TextView
        android:id="@+id/fragment_business_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/empty"/>

</android.support.v4.widget.SwipeRefreshLayout>