...
            android:background="#B6C9F1"
            app:tabIndicatorColor="@color/colorPrimary"
            app:tabTextColor="#D4E0F8"
            app:tabSelectedTextColor="#FFF"/>

        <android.support.v4.view.ViewPager
            android:id="@+id/activity_main_viewpager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <android.support.design.widget.NavigationView
...
